--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@twa-dev/sdk": "^7.0.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/web3": "^1.2.2",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
+    "web3": "^4.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
