--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "hardhat clean",
+    "compile": "hardhat clean && hardhat compile && npm run artifact-to-abis",
+    "verify": "hardhat verify --network polygon_amoy",
+     "deploy": "npm run compile && hardhat run ./scripts/deploy.ts --network",
+    "artifact-to-abis": "node tools/artifacts-to-abis.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.6"
+    "@types/node": "^20.14.10",
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.22.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^1.1.1",
+    "@openzeppelin/contracts": "^5.0.2"
   }
 }
